--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,28 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  image_picker: ^1.1.2
+  shared_preferences: ^2.0.13
+  qr_flutter: ^4.1.0
+  share_plus: ^6.3.0 
+  device_calendar: ^4.3.3
+  timezone: ^0.9.4
+  intl: ^0.17.0
+  google_maps_flutter: ^2.9.0
+  geolocator: ^13.0.1
+  permission_handler: ^11.2.0
+  barcode_scan2: ^4.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.8.0
-  firebase_auth: ^4.4.0
+  firebase_core: ^3.4.1
+  firebase_auth: ^5.2.1
+  cloud_firestore: ^5.4.1
+  firebase_storage: ^12.0.0
+  firebase_app_check: ^0.3.1+3
+  table_calendar: ^3.0.8
 
 dev_dependencies:
   flutter_test:
