--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>La tua posizione è necessaria per mostrare la tua posizione sulla mappa</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>La tua posizione è necessaria per mostrare la tua posizione sulla mappa</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Questa app necessita della fotocamera per scattare foto</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Questa app necessita della libreria fotografica per caricare foto</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
