--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,14 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>La tua posizione è necessaria per mostrare la tua posizione sulla mappa</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>La tua posizione è necessaria per mostrare la tua posizione sulla mappa</string>
-	<key>NSCameraUsageDescription</key>
-	<string>Questa app necessita della fotocamera per scattare foto</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Questa app necessita della libreria fotografica per caricare foto</string>
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -32,6 +26,22 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Questa app necessita della fotocamera per scattare foto</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Questa app richiede l'accesso continuo alla tua posizione per fornire un'esperienza migliore.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Questa app richiede sempre l'accesso alla tua posizione per fornire funzionalità avanzate.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Questa app richiede l'accesso alla tua posizione per fornire funzionalità basate sulla posizione.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Questa app necessita della libreria fotografica per caricare foto</string>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -51,9 +61,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>CADisableMinimumFrameDurationOnPhone</key>
-	<true/>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
-	<true/>
 </dict>
 </plist>
