--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   geolocator: ^13.0.1
   permission_handler: ^11.2.0
   barcode_scan2: ^4.2.0
+  google_fonts: ^6.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
