--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,3 +1,5 @@
+
+// Carica le proprietà locali
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
 if (localPropertiesFile.exists()) {
@@ -6,11 +8,13 @@ if (localPropertiesFile.exists()) {
     }
 }
 
+// Recupera il percorso del Flutter SDK
 def flutterRoot = localProperties.getProperty('flutter.sdk')
 if (flutterRoot == null) {
-    throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
+    throw new Exception("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
 }
 
+// Recupera le versioni del Flutter
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
 if (flutterVersionCode == null) {
     flutterVersionCode = '1'
@@ -21,13 +25,13 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
+// Applicazione dei plugin
 apply plugin: 'com.android.application'
-// START: FlutterFire Configuration
 apply plugin: 'com.google.gms.google-services'
-// END: FlutterFire Configuration
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
+// Configurazione Android
 android {
     namespace 'com.example.social_flutter_giorgio'
     compileSdkVersion 34
@@ -38,21 +42,15 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.social_flutter_giorgio"
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 23  // Versione minima di SDK, modifica se necessario
+        targetSdkVersion 33
+        versionCode flutterVersionCode.toInteger()  // Converte in intero
         versionName flutterVersionName
-        minSdkVersion 23 // Modifica questa riga
-        targetSdkVersion 33 // Puoi usare l'ultima versione del targetSdkVersion disponibile
-        versionCode 1
-        versionName "1.0"
-
     }
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
         }
     }
