--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,6 @@ dependencies:
   image_picker: ^1.1.2
   shared_preferences: ^2.0.13
   qr_flutter: ^4.1.0
-  #share_plus: ^6.3.4
   device_calendar: ^4.3.3
   timezone: ^0.9.4
   intl: ^0.17.0
@@ -52,6 +51,8 @@ dependencies:
   firebase_storage: ^12.0.0
   firebase_app_check: ^0.3.1+3
   table_calendar: ^3.0.8
+  share_plus: ^10.1.3
+  #google_mobile_ads: ^2.4.0
 
 dev_dependencies:
   flutter_test:
