--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,18 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>io.flutter.embedded_views_preview</key>
-	<true/>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>We need your location to provide better services.</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>We need your location even in the background.</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>We need your location for this feature to work seamlessly.</string>
-	<key>GMSApiKey</key>
-	<string>AIzaSyBlpeummzCUv-D6Of--JOr750BQegu2oyo</string>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
+	<key>NSCalendarsUsageDescription</key>
+	<string>This app uses the calendar to help you organize your events.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -34,10 +26,16 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
+	<key>GMSApiKey</key>
+	<string>AIzaSyBlpeummzCUv-D6Of--JOr750BQegu2oyo</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>Questa app necessita della fotocamera per scattare foto</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Abbiamo bisogno della tua posizione per fornire funzionalità avanzate.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Location permission is required.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Questa app necessita della libreria fotografica per caricare foto</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
@@ -65,5 +63,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>io.flutter.embedded_views_preview</key>
+	<true/>
 </dict>
 </plist>
