--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,16 +42,37 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.social_flutter_giorgio"
-        minSdkVersion 23  // Versione minima di SDK, modifica se necessario
-        targetSdkVersion 33
-        versionCode flutterVersionCode.toInteger()  // Converte in intero
-        versionName flutterVersionName
+        applicationId "com.eventFit"
+        minSdkVersion 23 
+        targetSdkVersion 34
+        versionCode 2
+        versionName "1.1"
     }
 
     buildTypes {
         release {
             signingConfig signingConfigs.debug
+        }
+    }
+     signingConfigs {
+        release {
+            def keystorePropertiesFile = rootProject.file("key.properties")
+            def keystoreProperties = new Properties()
+            keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
+            storeFile file(keystoreProperties['storeFile'])
+            storePassword keystoreProperties['storePassword']
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+        }
+    }
+    
+    buildTypes {
+        release {
+            signingConfig signingConfigs.release
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 }
