--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  url_launcher: ^6.1.0
+  flutter_gen_runner: ^5.3.2
   image_picker: ^1.1.2
   shared_preferences: ^2.0.13
   qr_flutter: ^4.1.0
   device_calendar: ^4.3.3
   timezone:  ^0.9.4
-  intl: ^0.20.1 
+  intl: ^0.19.0
   google_maps_flutter: ^2.10.0
   geolocator: ^13.0.2
   geolocator_apple: ^2.3.8 
@@ -46,7 +50,7 @@ dependencies:
   cloud_firestore: ^5.6.2
   cupertino_icons: ^1.0.2
   firebase_app_check: ^0.3.1+3
-  table_calendar: ^3.2.0
+  table_calendar: ^3.1.3
   share_plus: ^10.1.3
   rename: ^3.0.2
   flutter_launcher_icons: ^0.14.3
@@ -77,6 +81,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
