--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,4 @@
 org.gradle.jvmargs=-Xmx1536M
 android.useAndroidX=true
 android.enableJetifier=true
+GOOGLE_API_KEY=AIzaSyBlpeummzCUv-D6Of--JOr750BQegu2oyo
