--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,3 @@
-
 // Carica le proprietà locali
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
@@ -15,15 +14,8 @@ if (flutterRoot == null) {
 }
 
 // Recupera le versioni del Flutter
-def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
-if (flutterVersionCode == null) {
-    flutterVersionCode = '1'
-}
-
-def flutterVersionName = localProperties.getProperty('flutter.versionName')
-if (flutterVersionName == null) {
-    flutterVersionName = '1.0'
-}
+def flutterVersionCode = localProperties.getProperty('flutter.versionCode') ?: '1'
+def flutterVersionName = localProperties.getProperty('flutter.versionName') ?: '1.0'
 
 // Applicazione dei plugin
 apply plugin: 'com.android.application'
@@ -43,18 +35,19 @@ android {
 
     defaultConfig {
         applicationId "com.eventFit"
-        minSdkVersion 23 
-        targetSdkVersion 34
-        versionCode 2
-        versionName "1.1"
+        minSdkVersion 23
+        targetSdkVersion 35
+        versionCode flutterVersionCode.toInteger()
+        versionName flutterVersionName
+        // Un unico blocco manifestPlaceholders con tutte le variabili
+        manifestPlaceholders = [
+            applicationName: "io.flutter.app.FlutterApplication",
+            GOOGLE_API_KEY: project.hasProperty('GOOGLE_API_KEY') ? GOOGLE_API_KEY : "default_key"
+        ]
     }
 
-    buildTypes {
-        release {
-            signingConfig signingConfigs.debug
-        }
-    }
-     signingConfigs {
+    // Configurazione della firma
+    signingConfigs {
         release {
             def keystorePropertiesFile = rootProject.file("key.properties")
             def keystoreProperties = new Properties()
@@ -66,7 +59,8 @@ android {
             keyPassword keystoreProperties['keyPassword']
         }
     }
-    
+
+    // Unico blocco buildTypes
     buildTypes {
         release {
             signingConfig signingConfigs.release
@@ -74,9 +68,16 @@ android {
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            signingConfig signingConfigs.debug
+        }
     }
 }
 
 flutter {
     source '../..'
+}
+
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
